# numerical_linear_algebra

./: README.md  REFACTORING_SUMMARY.md  lecture_plan.txt
Chapter1/: Sec1_1.ipynb  Sec1_2.ipynb  Sec1_3.ipynb  Sec1_4.ipynb  Sec1_5.ipynb
Chapter2/: Sec2_1.ipynb  Sec2_2.ipynb
Trefethen & Bau & MATLAB & Julia, Lectures 12-13/: notes.md
Trefethen & Bau Iterative methods/: 32.txt  33.txt  35.txt  37.txt  40.txt  note.txt.txt
Trefethen & Bau Lecture 3/: demo.ipynb
Trefethen & Bau Lectures 20, 21, 23/: demo.ipynb
Trefethen & Bau Lectures 6-7/: notes.md
Trefethen & Bau, Lecture 1/: demo.ipynb
Trefethen & Bau, Lecture 2/: notes.md
Trefethen & Bau, Lecture 4/: notes.md
Trefethen & Bau, Lecture 8/: demo.ipynb
Trefethen & bau Lecture 5/: demo.ipynb
docs/: diffrentator.txt  fft.txt  focus.txt  matrix_size.txt  series.txt  systems_topics.txt
driscoll/: Eigenvalue conditioning.txt  Householder QR.txt  Least squares data fitting.txt  Linear system basics.txt  Linear system conditioning.txt  Matrix norms.txt  Normal equations.txt  QR factorization.txt  Singular value decomposition.txt  Solving linear systems in MATLAB.txt  tactiq-free-transcript-GhvU1-XAdFY.txt  tactiq-free-transcript-I2SVyc_Tqa8.txt  tactiq-free-transcript-Sn-9tlPe4gg.txt  tactiq-free-transcript-_neGVEBjLJA.txt  tactiq-free-transcript-ePtbPIzPiKA.txt  tactiq-free-transcript-geKoh0N1p94.txt  tactiq-free-transcript-swZICEHn56Y.txt  tactiq-free-transcript-uHhenaXGTqI.txt  tactiq-free-transcript-ukcQk9jLcZ0.txt  tactiq-free-transcript-v6EwNUHV5rg.txt  tactiq-free-transcript-vhdTVrYVXrg.txt  (+2 more)
practical_course/code/: CMakeLists.txt  cache_locality.cpp  gemm_benchmark.cpp  heat_rod_1M.cpp  heat_rod_3x3.cpp  iterative_solve.cpp  pitfalls_demo.cpp  sparse_poisson_2d.cpp  svd_solve.cpp
(+183 files in other folders)
